# phptdlib

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.env  LICENSE  Makefile  README.md  tdlib.cpp  tdlib.hpp  tdlib.ini  tdlib_json_client.cpp  tdlib_json_client.hpp  test.php
.github/workflows/: cmake.yml
docs/: docker.html  documentation.html  index.html  installation.html
docs/assets/plugins/stickyfill/: package-lock.json  package.json
include/: common.cpp  common.hpp  td_json_client_func.cpp  td_json_client_func.hpp
include/TDApi/: TDLibLogConfiguration.cpp  TDLibLogConfiguration.hpp  TDLibParameters.cpp  TDLibParameters.hpp
include/TDLib/: BaseJsonClient.cpp  BaseJsonClient.hpp  JsonClient.cpp  JsonClient.hpp
lib/: tdlib_json_client.cpp  tdlib_json_client.hpp  tdlib_json_client_func.cpp  tdlib_json_client_func.hpp
php_examples/: TDApi_TDLibParameters.php  TDLib_JsonClient.php  client.php  credentials.php.dist  func.php  old.php
scripts/: functions.sh  install.sh
stubs/: tdlib.php
tests/: 01-TDLibLogConfiguration.cpp  02-TDLibParameters.cpp  10-BaseJsonClient.cpp  20-JsonClient.cpp
tests/scripts/: Dockerfile.opensuse-shared  Dockerfile.opensuse-static  build_docker.sh  docker_build.sh
tests/src/: 01-TDLibLogConfiguration.cpp  02-TDLibParameters.cpp  10-BaseJsonClient.cpp  20-JsonClient.cpp  catch.hpp
